Fix header link text and improve readability

--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ header a {
     color: #fff;
 }
 
+header p {
+    color: #fff;
+}
+
 header a:visited {
     color: #fff;
 }
